src/test/deca/context/invalid/test_error_3.22-4.deca
// Description:
//    Programme soulevant l'erreur (3.22)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Expression booléenne attendue (règle 3.22)
//
// Historique:
//    cree le 13/01/2022

{
   if("a") {
   }
}